[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
description = "Authentication and authorization data in a logic programming language."
documentation = "https://docs.rs/passdata/"
edition = "2021"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "CHANGELOG.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
license = "MIT OR Apache-2.0"
name = "passdata"
repository = "https://github.com/bluk/passdata"
readme = "README.md"
version = "0.0.2"

[dependencies]
either = { version ="1.9.0", default-features = false }
generic-array = "0.14.7"
paste = "1.0.14"
typenum = { version  = "1.16.0", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.2.0"

[features]
default = ["std"]

std = []

alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
